import { Plan } from "./Plan";

export class FreePlan extends Plan {
  constructor() {
    super(1, "Free", 0);
  }
}